# interactive_chatbot_prompt_management

./: .gitignore  README.md  pyproject.toml
evaluation/test_cases/prompt_injection/: attempt_ignores_context.json  code_based_prompt_injection.json  exploit_via_instruction.json  fake_context_injection.json  fake_politeness_injection.json  hijack_detection.json  jailbreak_style.json  language_switch_exploit.json  menu_padding_trick.json  multicontext_confusion.json  role_reversal.json
evaluation/test_cases/simple_order_test_cases/: cancelling_order.json  empty_order_request.json  follow_up_after_pending.json  misspelled_items.json  modify_order_empty_list.json  modify_order_existing_list.json  multiple_orders.json  no_quantity_specified_defaults_to_one.json  not_available_in_menu.json  partial_item_match.json  show_list_of_orders.json
infrastructure/terraform/: ec2_bootstrap.sh  main.tf
prompts/: base_prompt.txt
src/interactive_chatbot_demo/: app.py  demo_introduction.py  intialize.py
src/interactive_chatbot_demo/pages/: 1_manage_prompt.py  2_test_cases.py  3_interactive_chatbot.py
