[project]
name = "interactive-chatbot-prompt-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.93.0",
    "streamlit>=1.46.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
streamlit-start = "interactive_chatbot_demo.app:main"
